--- a/app/src/main/res/layout/fragment_mine.xml
+++ b/app/src/main/res/layout/fragment_mine.xml
@@ -5,6 +5,15 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
+    <ImageView
+        android:src="@mipmap/ic_setting"
+        android:layout_marginTop="15dp"
+        android:layout_marginEnd="15dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_width="30dp"
+        android:layout_height="30dp"/>
+
 
     <com.google.android.material.imageview.ShapeableImageView
         android:id="@+id/image_head"
@@ -25,6 +34,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/image_head" />
+
+
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
