--- a/app/src/main/res/layout/activity_cook_detail.xml
+++ b/app/src/main/res/layout/activity_cook_detail.xml
@@ -1,33 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".activiry.CookDetailActivity">
 
     <FrameLayout
         android:id="@+id/bar"
-        app:layout_constraintTop_toTopOf="parent"
-        android:background="@color/white"
         android:layout_width="match_parent"
-        android:layout_height="44dp">
-
+        android:layout_height="44dp"
+        android:background="@color/white"
+        app:layout_constraintTop_toTopOf="parent">
         <ImageView
             android:id="@+id/image_back"
-            android:layout_marginLeft="15dp"
-            android:layout_gravity="center_vertical"
-            android:src="@mipmap/ic_back_alpha_black_round_bg"
             android:layout_width="30dp"
-            android:layout_height="30dp"/>
+            android:layout_height="30dp"
+            android:layout_gravity="center_vertical"
+            android:layout_marginLeft="15dp"
+            android:src="@mipmap/ic_back_alpha_black_round_bg" />
 
         <ImageView
             android:id="@+id/image_collect"
-            android:layout_marginRight="15dp"
-            android:layout_gravity="center_vertical|right"
-            android:src="@mipmap/ic_collect"
             android:layout_width="30dp"
-            android:layout_height="30dp"/>
+            android:layout_height="30dp"
+            android:layout_gravity="center_vertical|right"
+            android:layout_marginRight="15dp"
+            android:src="@mipmap/ic_collect" />
     </FrameLayout>
 
 
@@ -113,11 +113,12 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
-                app:layout_constraintTop_toBottomOf="@+id/tv_material_content"></androidx.recyclerview.widget.RecyclerView>
+                app:layout_constraintTop_toBottomOf="@+id/tv_material_content">
 
+            </androidx.recyclerview.widget.RecyclerView>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.core.widget.NestedScrollView>
 
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
