--- a/app/src/main/res/layout/fragment_mine.xml
+++ b/app/src/main/res/layout/fragment_mine.xml
@@ -6,13 +6,14 @@
     android:orientation="vertical">
 
     <ImageView
-        android:src="@mipmap/ic_setting"
+        android:id="@+id/image_setting"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
         android:layout_marginTop="15dp"
         android:layout_marginEnd="15dp"
-        app:layout_constraintTop_toTopOf="parent"
+        android:src="@mipmap/ic_setting"
         app:layout_constraintRight_toRightOf="parent"
-        android:layout_width="30dp"
-        android:layout_height="30dp"/>
+        app:layout_constraintTop_toTopOf="parent" />
 
 
     <com.google.android.material.imageview.ShapeableImageView
@@ -27,15 +28,23 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:layout_marginTop="20dp"
+        android:id="@+id/tc_user_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
         android:text="用户名"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/image_head" />
 
-
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/boom_rv"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tc_user_name" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
