--- a/app/src/main/res/layout/activity_cook_detail.xml
+++ b/app/src/main/res/layout/activity_cook_detail.xml
@@ -13,6 +13,7 @@
         android:layout_height="44dp"
         android:background="@color/white"
         app:layout_constraintTop_toTopOf="parent">
+
         <ImageView
             android:id="@+id/image_back"
             android:layout_width="30dp"
@@ -21,13 +22,20 @@
             android:layout_marginLeft="15dp"
             android:src="@mipmap/ic_back_alpha_black_round_bg" />
 
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:text="菜谱详情"
+            android:textSize="15sp" />
+
         <ImageView
             android:id="@+id/image_collect"
             android:layout_width="30dp"
             android:layout_height="30dp"
             android:layout_gravity="center_vertical|right"
             android:layout_marginRight="15dp"
-            android:src="@mipmap/ic_collect" />
+            android:src="@drawable/ic_cookbook_collect" />
     </FrameLayout>
 
 
