--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
     <color name="white">#FFFFFFFF</color>
     <color name="fa">#EEE8E8</color>
     <color name="ff0c19">#ff0c19</color>
+    <color name="colorPrimary">#03A9F4</color>
 </resources>
