--- a/app/src/main/res/layout/activity_cook_detail.xml
+++ b/app/src/main/res/layout/activity_cook_detail.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context=".activiry.CookDetailActivity">
-
+    <!--导航栏-->
     <FrameLayout
         android:id="@+id/bar"
         android:layout_width="match_parent"
@@ -38,24 +38,24 @@
             android:src="@drawable/ic_cookbook_collect" />
     </FrameLayout>
 
-
+    <!--滑动部分-->
     <androidx.core.widget.NestedScrollView
 
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@+id/bar">
-
+        <!--约束布局控制内容的各个位置-->
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
-
+            <!--封面图-->
             <ImageView
                 android:id="@+id/image_cover"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 app:layout_constraintTop_toTopOf="parent"
                 tools:layout_height="200dp" />
-
+            <!--标题-->
             <TextView
                 android:id="@+id/tv_title"
                 android:layout_width="wrap_content"
@@ -67,7 +67,7 @@
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/image_cover"
                 tools:text="我是标题" />
-
+            <!--条件-->
             <TextView
                 android:id="@+id/tv_require"
                 android:layout_width="wrap_content"
@@ -79,7 +79,7 @@
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/tv_title"
                 tools:text="所需人数1-2人，准备时间10-20分钟，烹饪时间10-20分钟" />
-
+            <!--介绍-->
             <TextView
                 android:id="@+id/tv_content"
                 android:layout_width="wrap_content"
@@ -103,7 +103,7 @@
                 android:textStyle="bold"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/tv_content" />
-
+            <!--用料量-->
             <TextView
                 android:id="@+id/tv_material_content"
                 android:layout_width="wrap_content"
@@ -115,7 +115,7 @@
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/tv_material"
                 tools:text="淀粉-----适量\n糖-----适量" />
-
+            <!--步骤列表-->
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/recycler_view"
                 android:layout_width="match_parent"
