--- a/app/src/main/res/layout/activity_cook_detail.xml
+++ b/app/src/main/res/layout/activity_cook_detail.xml
@@ -40,7 +40,7 @@
 
     <!--滑动部分-->
     <androidx.core.widget.NestedScrollView
-
+        android:id="@+id/content_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@+id/bar">
@@ -127,6 +127,16 @@
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.core.widget.NestedScrollView>
+
+    <include
+        android:visibility="gone"
+        android:id="@+id/error_layout"
+        layout="@layout/errror_layout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_gravity="center">
+
+    </include>
 
 
 </LinearLayout>
